--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ body {
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+html {
+  font-size: 24px;
+}
 
 .App-header {
   background-color: #222;
@@ -11,7 +14,7 @@ body {
 }
 
 .App-title {
-  font-size: 3rem;
+  font-size: 2rem;
   align-self: center;
   display: flex;
   justify-content: center;
