--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,17 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 html {
-  font-size: 24px;
+  font-size: 20px;
 }
-
+h1 {
+  font-size: 2rem;
+}
+h2 {
+  font-size: 1.8rem;
+}
+h3 {
+  font-size: 1.6rem;
+}
 .App-header {
   background-color: #222;
   padding: 20px;
