--- a/src/classes/ClassItem.css
+++ b/src/classes/ClassItem.css
@@ -2,8 +2,5 @@
   text-align: center;
   padding: 10px;
   border: 2px dashed black;
-}
-a {
-  text-decoration: none;
-  color: #222;
+  max-width: 1fr;
 }
