--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,16 @@ html {
   font-size: 20px;
 }
 h1 {
-  font-size: 2rem;
+  font-weight: 700;
+  font-size: 1.6rem;
 }
 h2 {
-  font-size: 1.8rem;
+  font-weight: 700;
+  font-size: 1.4rem;
 }
 h3 {
-  font-size: 1.6rem;
+  font-weight: 700;
+  font-size: 1.2rem;
 }
 .App-header {
   background-color: #222;
