--- a/src/classes/NewClass.css
+++ b/src/classes/NewClass.css
@@ -7,6 +7,7 @@
 .newClass button, .newClass input {
   width: 100%;
   font-size: 24px;
+  cursor: pointer;
 }
 .newClass input {
   background: #fff;
