--- a/src/classes/ClassPage.css
+++ b/src/classes/ClassPage.css
@@ -4,5 +4,17 @@
 .classPage ul {
   list-style: none;
   margin: 0;
-  padding: 0;
+}
+.studentList {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  padding: 0 20px 20px 20px;
+}
+.studentItem {
+  text-align: center;
+  padding: 10px;
+  border: 2px dashed black;
+  max-width: 1fr;
+  height: 100%;
 }
