--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 html {
   font-size: 20px;
@@ -18,15 +18,19 @@ h3 {
   font-weight: 700;
   font-size: 1.2rem;
 }
-.App-header {
-  background-color: #222;
-  padding: 20px;
-  color: #fff;
+.navbar-item {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-
-.App-title {
-  font-size: 2rem;
-  align-self: center;
-  display: flex;
-  justify-content: center;
+.navbar {
+  margin-bottom: 20px;
+  border-bottom: 1px dashed rgb(54, 54, 54);
+}
+.card {
+  transition: box-shadow .5s;
+  border: 1px dashed rgb(54, 54, 54);
+  box-shadow: 1px 1px rgb(245, 245, 245);
+}
+a .card:hover {
+  box-shadow: 3px 3px 3px rgb(54, 54, 54);
 }
