--- a/src/classes/ClassPage.css
+++ b/src/classes/ClassPage.css
@@ -18,3 +18,16 @@
   max-width: 1fr;
   height: 100%;
 }
+.studentHeader {
+  display: flex;
+  flex-direction: row;
+}
+.studentHeader h1 {
+  margin-bottom: 0;
+}
+.studentColor {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-left: auto;
+}
