--- a/src/App.css
+++ b/src/App.css
@@ -32,5 +32,5 @@ h3 {
   box-shadow: 1px 1px rgb(245, 245, 245);
 }
 a .card:hover {
-  box-shadow: 3px 3px 3px rgb(54, 54, 54);
+  box-shadow: 3px 3px 3px rgb(219, 219, 219);;
 }
