--- a/src/classes/ClassPage.css
+++ b/src/classes/ClassPage.css
@@ -7,15 +7,11 @@
 }
 .studentList {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
-  padding: 0 20px 20px 20px;
+  padding-bottom: 20px;
 }
 .studentItem {
-  text-align: center;
-  padding: 10px;
-  border: 2px dashed black;
-  max-width: 1fr;
   height: 100%;
 }
 .studentHeader {
@@ -26,6 +22,7 @@
   margin-bottom: 0;
 }
 .studentColor {
+  min-width: 50px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
