--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,9 @@ h3 {
   font-weight: 700;
   font-size: 1.2rem;
 }
+img {
+  width: 100%;
+}
 .navbar-item {
   padding-top: 20px;
   padding-bottom: 20px;
