--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+body, button, input, select, textarea {
+  font-family: 'Josefin Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 html {
   font-size: 20px;
@@ -19,6 +17,7 @@ h3 {
   font-size: 1.2rem;
 }
 img {
+  height: auto;
   width: 100%;
 }
 .navbar-item {
@@ -27,13 +26,14 @@ img {
 }
 .navbar {
   margin-bottom: 20px;
-  border-bottom: 1px dashed rgb(54, 54, 54);
+  border-bottom: 2px dashed rgb(219, 219, 219);
 }
 .card {
-  transition: box-shadow .5s;
-  border: 1px dashed rgb(54, 54, 54);
-  box-shadow: 1px 1px rgb(245, 245, 245);
+  transition: box-shadow .3s, transform .3s;
+  border: 2px dashed rgb(219, 219, 219);
+  box-shadow: none;
 }
 a .card:hover {
-  box-shadow: 3px 3px 3px rgb(219, 219, 219);;
+  box-shadow: 0 2px 5px rgb(219, 219, 219);
+  transform: translateY(-5px)
 }
