--- a/src/containers/EvalsContainer.css
+++ b/src/containers/EvalsContainer.css
@@ -1,7 +1,6 @@
 .EvalContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template: repeat(5, [row] 1fr) / repeat(5, [col] 1fr);
   grid-gap: 20px;
   margin-left: 20px;
 }
